[gd_scene format=3 uid="uid://fohtho5rqpxo"]

[ext_resource type="StyleBox" uid="uid://b7y8mffqnrc2f" path="res://resources/themes/DankNooner/button_normal.tres" id="1_p7spx"]
[ext_resource type="Script" uid="uid://d2naekejlkomd" path="res://menus/out_of_game/lobby_menu/player_list_item.gd" id="1_vlnsy"]
[ext_resource type="Texture2D" uid="uid://cwf7vhr6hpjoj" path="res://resources/img/Logo.svg" id="2_vlnsy"]
[ext_resource type="FontFile" uid="uid://tyej4l632h7k" path="res://resources/fonts/MuseoModerno/static/MuseoModerno-Regular.ttf" id="4_fp5ot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp5ot"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.25490198, 0.6862745, 1, 1)
border_blend = true
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="PlayerListItem" type="MarginContainer" unique_id=1716978132]
custom_minimum_size = Vector2(480, 0)
offset_left = 12.0
offset_top = 12.0
offset_right = 489.0
offset_bottom = 204.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("1_vlnsy")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1860626553]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_p7spx")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer" unique_id=1368577702]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer" unique_id=110244629]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fp5ot")

[node name="PlayerIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/PanelContainer" unique_id=1232060762]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_vlnsy")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer" unique_id=1927392922]
layout_mode = 2

[node name="PlayerName" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer" unique_id=1488068940]
unique_name_in_owner = true
layout_mode = 2
text = "player_name"

[node name="HostLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer" unique_id=1209324352]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_fp5ot")
theme_override_font_sizes/font_size = 18
text = "PLAYER_IS_HOST_LABEL"

[node name="PingLabel" type="Label" parent="PanelContainer/HBoxContainer" unique_id=992432967]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Ping: -1"
